@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-30T08:20:42Z",
+  "timestamp" : "2022-04-30T16:23:26Z",
   "count_outdated" : 133,
   "uniques_outdated" : 92,
-  "count" : 146,
-  "uniques" : 99,
+  "count" : 150,
+  "uniques" : 102,
   "clones" : [
     {
       "timestamp": "2022-04-20T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 7, 8 ],
       "uniques": 5,
       "uniques_minmax": [ 4, 5 ]
+    },
+    {
+      "timestamp": "2022-04-30T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
