@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 5,
+  "count": 17,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-04-20T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-04-25T00:00:00Z",
       "count": 8,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-04-30T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
