@@ -1,3 +1,9 @@
+2022-04-30T16:23:26Z:
+* notice: last 14d: all unq: 17 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 133 92 / 146 99
+* notice: next accum: outdated-all outdated-unq / all unq: 133 92 / 150 102
+* notice: prev json diff // prev day diff: unq all: +3 +4 / -0 -0 // +3 +4 / -0 -0
+
 2022-04-30T08:20:42Z:
 * notice: last 14d: all unq: 13 5
 * notice: prev accum: outdated-all outdated-unq / all unq: 130 90 / 146 99
